migrate service layer tests to JUnit 5